<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:id="@+id/card_skills"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_margin="@dimen/dimen_4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_marginLeft="@dimen/dimen_4dp"
                        android:layout_marginRight="@dimen/dimen_4dp"
                        android:layout_marginTop="@dimen/dimen_4dp"
                        android:layout_width="match_parent"
                        android:padding="@dimen/dimen_4dp"
                        android:background="@android:color/white"
                        android:id="@+id/skill_rl"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/ic_skills"
                            android:minWidth="40dp"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:minHeight="40dp"
                            android:id="@+id/img_skill_icon"
                            />
                        <TextView
                            android:layout_marginLeft="@dimen/dimen_8dp"
                            android:layout_width="wrap_content"
                            android:textSize="@dimen/dimen_16sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_centerInParent="true"
                            android:id="@+id/tv_skills_title"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="@string/skills_education"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/img_skill_icon"/>

                        <TextView
                            android:layout_marginLeft="@dimen/dimen_8dp"
                            android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:padding="@dimen/dimen_4dp"
                            android:layout_centerHorizontal="true"
                            android:id="@+id/skill_count"
                            android:layout_alignParentRight="true"
                            android:background="@drawable/rounded_green_corner_bg"
                            android:textColor="@android:color/white"
                            android:text="@string/skills_count"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/tv_skills_title"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:id="@+id/view_sillset"
                            android:background="@android:color/darker_gray"
                            android:layout_marginTop="@dimen/dimen_8dp"
                            android:layout_below="@id/sub"/>
                        <TextView
                            android:id="@+id/sub"
                            android:layout_marginTop="@dimen/dimen_16dp"
                            android:layout_marginLeft="@dimen/dimen_8dp"
                            android:layout_width="wrap_content"
                            android:layout_toRightOf="@id/img_skill_icon"
                            android:layout_below="@id/skill_count"
                            android:text="@string/skills_sub_title"
                            android:layout_height="wrap_content"/>

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/skill_rl"
                        android:layout_marginLeft="@dimen/dimen_4dp"
                        android:layout_marginRight="@dimen/dimen_4dp"
                        android:padding="@dimen/dimen_4dp"
                        android:background="@android:color/white"
                        android:id="@+id/rl_et_skills">
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/et_skills"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_skills"
                            android:layout_marginTop="@dimen/dimen_8dp"
                            android:layout_marginLeft="@dimen/dimen_4dp"
                            android:layout_marginRight="@dimen/dimen_4dp"
                            android:layout_marginBottom="@dimen/dimen_4dp"
                            android:inputType="text|textNoSuggestions"
                            app:met_clearButton="true"
                            app:met_errorColor="@android:color/holo_red_dark"
                            android:textAlignment="viewStart"
                            app:met_helperText="Ex: Java"
                            app:met_floatingLabel="highlight"
                            app:met_primaryColor="@color/colorPrimaryDark" />
                        <android.support.design.widget.FloatingActionButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:layout_margin="@dimen/dimen_4dp"
                            android:layout_below="@id/et_skills"
                            android:layout_centerInParent="true"
                            app:srcCompat="@drawable/ic_check_black_24dp"
                            android:foregroundGravity="center"
                            app:fabSize="normal"/>

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_marginLeft="@dimen/dimen_4dp"
                        android:layout_marginRight="@dimen/dimen_4dp"
                        android:padding="@dimen/dimen_4dp"
                        android:visibility="gone"
                        android:id="@+id/skill_btn"
                        android:layout_below="@id/rl_et_skills"
                        android:layout_width="match_parent"
                        android:background="@android:color/white"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/dimen_8dp"
                            android:layout_marginRight="@dimen/dimen_4dp"
                            android:text="@string/add_skills"
                            android:textStyle="bold"
                            android:layout_margin="@dimen/dimen_4dp"
                            android:layout_centerHorizontal="true"
                            android:singleLine="true"
                            android:background="@drawable/rounded_corner_bg_primerycolor"
                            android:textColor="@android:color/white"
                            android:drawableRight="@drawable/ic_add_24dp_white"
                            android:id="@+id/add_skill"
                            android:textSize="@dimen/dimen_18sp"/>
                    </RelativeLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_below="@id/skill_btn"
                        android:layout_width="match_parent"
                        android:layout_margin="@dimen/dimen_4dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/li_chip_layout">
                        <android.support.design.chip.ChipGroup
                            android:id="@+id/chip_group"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </android.support.design.chip.ChipGroup>
                    </LinearLayout>
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_below="@id/card_skills"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:layout_marginRight="@dimen/dimen_4dp"
                android:layout_marginLeft="@dimen/dimen_4dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:background="@android:color/white"
                        android:layout_height="wrap_content"
                        android:id="@+id/rl_edu_title"
                        android:layout_margin="@dimen/dimen_4dp"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/ic_lecture"
                            android:minWidth="40dp"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:minHeight="40dp"
                            android:id="@+id/img_lecture_icon"
                            />
                        <TextView
                            android:layout_marginLeft="@dimen/dimen_8dp"
                            android:layout_width="wrap_content"
                            android:textSize="@dimen/dimen_16sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_centerInParent="true"
                            android:id="@+id/tv_education_title"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="@string/education_details"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/img_lecture_icon"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:id="@+id/view_edu_title"
                            android:background="@android:color/darker_gray"
                            android:layout_marginTop="@dimen/dimen_8dp"
                            android:layout_below="@id/img_lecture_icon"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dimen_4dp"
                        android:layout_marginLeft="@dimen/dimen_4dp"
                        android:layout_marginBottom="@dimen/dimen_4dp"
                        android:background="@android:color/white"
                        android:layout_below="@id/rl_edu_title">
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/et_degree"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_degree"
                            android:layout_marginTop="@dimen/dimen_8dp"
                            android:layout_marginLeft="@dimen/dimen_4dp"
                            android:layout_marginRight="@dimen/dimen_4dp"
                            android:layout_marginBottom="@dimen/dimen_4dp"
                            android:inputType="text|textNoSuggestions"
                            app:met_clearButton="true"
                            app:met_errorColor="@android:color/holo_red_dark"
                            android:textAlignment="viewStart"
                            app:met_helperText="Ex: SSLC, HSC, BSC, etc..."
                            app:met_floatingLabel="highlight"
                            app:met_primaryColor="@color/colorPrimaryDark" />
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/et_institutename"
                            android:layout_below="@id/et_degree"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_institutename"
                            android:layout_marginTop="@dimen/dimen_8dp"
                            android:layout_marginLeft="@dimen/dimen_4dp"
                            android:layout_marginRight="@dimen/dimen_4dp"
                            android:layout_marginBottom="@dimen/dimen_4dp"
                            android:inputType="text|textNoSuggestions"
                            app:met_clearButton="true"
                            app:met_errorColor="@android:color/holo_red_dark"
                            android:textAlignment="viewStart"
                            app:met_helperText="Ex: Sastra University, etc.."
                            app:met_floatingLabel="highlight"
                            app:met_primaryColor="@color/colorPrimaryDark" />
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/et_marks"
                            android:layout_below="@id/et_institutename"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_mark"
                            android:layout_marginTop="@dimen/dimen_8dp"
                            android:layout_marginLeft="@dimen/dimen_4dp"
                            android:layout_marginRight="@dimen/dimen_4dp"
                            android:layout_marginBottom="@dimen/dimen_4dp"
                            android:inputType="text|textNoSuggestions"
                            app:met_clearButton="true"
                            app:met_errorColor="@android:color/holo_red_dark"
                            android:textAlignment="viewStart"
                            app:met_helperText="Ex: 8CGPA, 90%, etc.."
                            app:met_floatingLabel="highlight"
                            app:met_primaryColor="@color/colorPrimaryDark" />
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/et_yearofpassing"
                            android:layout_below="@id/et_marks"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_yearofpassing"
                            android:layout_marginTop="@dimen/dimen_8dp"
                            android:layout_marginLeft="@dimen/dimen_4dp"
                            android:layout_marginRight="@dimen/dimen_4dp"
                            android:layout_marginBottom="@dimen/dimen_4dp"
                            android:inputType="text|textNoSuggestions"
                            app:met_clearButton="true"
                            app:met_errorColor="@android:color/holo_red_dark"
                            android:textAlignment="viewStart"
                            app:met_helperText="Ex: 2018 - 2019,2017 - 2019"
                            app:met_floatingLabel="highlight"
                            app:met_primaryColor="@color/colorPrimaryDark" />
                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/btn_edu_save"
                            android:layout_width="wrap_content"
                            android:padding="@dimen/dimen_16sp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/et_yearofpassing"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentEnd="true"
                            android:gravity="center_vertical"
                            android:text="@string/save"
                            android:textStyle="bold"
                            android:layout_margin="@dimen/dimen_8dp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:background="@drawable/rectangle_background_selected"/>

                        <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dimen_4dp"
                            android:id="@+id/rv_edu_list"
                            android:layout_below="@+id/btn_edu_save">
                        </android.support.v7.widget.RecyclerView>

                    </RelativeLayout>
                </RelativeLayout>


            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>



</RelativeLayout>